--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
         <img src="chat-icon.png" alt="Chat" class="icon">
       </button>
       <div class="contact-options">
-        <a href="mailto:example@example.com" class="contact-option mail-option">
+        <a href="mailto:msmtriadbuilders@gmail.com" class="contact-option mail-option">
           <img src="mail-icon.png" alt="Mail" class="contact-icon">
         </a>
         <a href="https://wa.me/9678922844" class="contact-option whatsapp-option" target="_blank">
