--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
-      <a class="navbar-brand" href="#">MSM TRIAD BUILDERS PRIVATE LIMITED</a>
+      <a class="navbar-brand" href="#">MSM TRIAD BUILDERS</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
