update resources, fixed hamburger menu on different screen sizes

--- a/index.html
+++ b/index.html
@@ -198,62 +198,81 @@
     <!-- Resources Section -->
     <section id="resources" class="py-5 text-center bg-light">
       <div class="container">
-        <h2>Our Resources</h2>
-        <p class="lead">Skilled professionals and top-of-the-line equipment at your service.</p>
-        <!-- Placeholder Cards -->
-        <div class="row">
-          <div class="col-md-4 mb-4">
-            <div class="card">
-              <img src="resource1.jpg" class="card-img-top" alt="Resource 1">
-              <div class="card-body">
-                <h5 class="card-title">Resource 1</h5>
-                <p class="card-text">Description of Resource 1.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4 mb-4">
-            <div class="card">
-              <img src="resource2.jpg" class="card-img-top" alt="Resource 2">
-              <div class="card-body">
-                <h5 class="card-title">Resource 2</h5>
-                <p class="card-text">Description of Resource 2.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4 mb-4">
-            <div class="card">
-              <img src="resource3.jpg" class="card-img-top" alt="Resource 3">
-              <div class="card-body">
-                <h5 class="card-title">Resource 3</h5>
-                <p class="card-text">Description of Resource 3.</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- Contact Section with Embedded Map -->
-    <section id="contact" class="py-5 text-center bg-light">
-        <div class="container">
-          <h2>Contact Us</h2>
-          <p class="lead">Get in touch with us or find us on the map below.</p>
+          <h2>Our Resources</h2>
+          <p class="lead">Expert resources, ready to bring your construction projects to life.</p>
           
-          <div class="contact-address">
-            <p>
-              496, Bilbari, Ramkrishna Nagar Road,<br>
-              P.O.: Anipur, P.S.: Ramkrishna Nagar,<br>
-              Dist.: Karimganj, State: Assam,<br>
-              Pin Code: 788734,<br>
-              Cell : +91 96789 22844<br>
-            </p>
+          <div class="row">
+              <!-- Heavy Machinery Card -->
+              <div class="col-md-4 mb-4">
+                  <div class="card service-card" style="background-image: url('heavy_machinery.jpg');">
+                      <div class="card-header d-flex align-items-center justify-content-center">
+                          <span class="header-title">Heavy Machinery</span>
+                      </div>
+                      <div class="card-overlay">
+                          <div class="card-body d-flex flex-column align-items-center justify-content-center">
+                              <p class="card-text">State-of-the-art equipment designed for durability and power, enabling efficient and safe construction.</p>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+  
+              <!-- Engineering Team Card -->
+              <div class="col-md-4 mb-4">
+                  <div class="card service-card" style="background-image: url('engineering_team.jpg');">
+                      <div class="card-header d-flex align-items-center justify-content-center">
+                          <span class="header-title">Engineering Team</span>
+                      </div>
+                      <div class="card-overlay">
+                          <div class="card-body d-flex flex-column align-items-center justify-content-center">
+                              <p class="card-text">Our skilled engineers bring precision and expertise to each project, ensuring exceptional quality.</p>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+  
+              <!-- Building Materials Card -->
+              <div class="col-md-4 mb-4">
+                  <div class="card service-card" style="background-image: url('building_materials.jpg');">
+                      <div class="card-header d-flex align-items-center justify-content-center">
+                          <span class="header-title">Building Materials</span>
+                      </div>
+                      <div class="card-overlay">
+                          <div class="card-body d-flex flex-column align-items-center justify-content-center">
+                              <p class="card-text">Top-quality materials sourced from trusted suppliers, ensuring stability and longevity for every build.</p>
+                          </div>
+                      </div>
+                  </div>
+              </div>
           </div>
-          <div class="map mb-4">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d10264.403560737317!2d92.4460428838802!3d24.554139222897934!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3751de5482f0d289%3A0xafe593ab219f1f0a!2sAnipur%20-%20Ramkrishna%20Nagar%20Rd%2C%20Assam!5e0!3m2!1sen!2sin!4v1730741084400!5m2!1sen!2sin" width="100%" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-           </div>
+      </div>
+  </section>
+    <!-- Contact Section with Embedded Map -->
+<!-- Contact Section with Embedded Map -->
+<section id="contact" class="py-5 text-center bg-light">
+  <div class="container">
+      <h2>Contact Us</h2>
+      <p class="lead">Get in touch with us or find us on the map below.</p>
 
+      <div class="contact-wrapper">
+          <!-- Contact Address Card -->
+          <div class="contact-card p-4 mb-4">
+              <h4 class="mb-3">Our Address</h4>
+              <p class="contact-address mb-0">
+                  496, Bilbari, Ramkrishna Nagar Road,<br>
+                  P.O.: Anipur, P.S.: Ramkrishna Nagar,<br>
+                  Dist.: Karimganj, State: Assam,<br>
+                  Pin Code: 788734,<br>
+                  Cell: <a href="tel:+919678922844" class="phone-link">+91 96789 22844</a>
+              </p>
+          </div>
 
-        </div>
-      </section>
+          <!-- Map Card -->
+          <div class="map-card">
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d10264.403560737317!2d92.4460428838802!3d24.554139222897934!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3751de5482f0d289%3A0xafe593ab219f1f0a!2sAnipur%20-%20Ramkrishna%20Nagar%20Rd%2C%20Assam!5e0!3m2!1sen!2sin!4v1730741084400!5m2!1sen!2sin" width="100%" height="400" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+          </div>
+      </div>
+  </div>
+</section>
     <!-- Footer -->
     <footer class="bg-dark text-white text-center py-4">
       <p>&copy; 2024 MSM TRIAD BUILDERS PRIVATE LIMITED. All Rights Reserved.</p>
